@@ -66,6 +66,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludeDevtools>false</excludeDevtools>
+                    <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -Djdk.tracePinnedThreads=short</jvmArguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
